--- a/app/src/main/res/drawable/button_border_fill.xml
+++ b/app/src/main/res/drawable/button_border_fill.xml
@@ -1,10 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimary"
-        android:angle="270" />
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorPrimaryDark">
 
-    <corners android:radius="15dp" />
-    <stroke android:width="5px" android:color="@color/colorPrimary" />
-</shape>
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorGrey" />
+            <corners android:radius="15dp" />
+        </shape>
+    </item>
+
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="90"
+                android:startColor="@color/colorPrimary"
+                android:endColor="@color/colorPrimary"
+                android:type="linear" />
+            <corners android:radius="15dp" />
+            <stroke android:width="5px" android:color="@color/colorPrimary" />
+        </shape>
+    </item>
+</ripple>
