--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -41,11 +41,32 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/tvCartTable"
+            android:gravity="end"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp"
+            android:textSize="16sp"
+            android:visibility="gone"
+            android:textColor="@color/colorGrey"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvCartNote"
+            android:gravity="end"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp"
+            android:textSize="16sp"
+            android:textColor="@color/colorGrey"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/tvCartSubTotal"
             android:text="Sub Total : 0"
             android:gravity="end"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp"
             android:textSize="16sp"
             android:visibility="gone"
             android:textStyle="bold"
@@ -56,8 +77,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvCartDiscount"
             android:gravity="end"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp"
             android:textSize="16sp"/>
 
         <TextView
@@ -65,8 +86,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvCartTax"
             android:gravity="end"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp"
             android:textSize="16sp"/>
 
         <TextView
@@ -74,21 +95,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvCartTotal"
             android:gravity="end"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="5dp"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvCartNote"
-            android:gravity="end"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorGrey"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -243,6 +254,131 @@
                     android:text="ok"
                     android:textColor="@color/colorWhite"
                     android:id="@+id/btnCartDoneProd"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:id="@+id/cvCartCustTable"
+        android:layout_margin="20sp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/colorBlack"
+                android:text="Table"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorBlack"
+                android:text="Table Number"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                app:cardCornerRadius="10dp">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:backgroundTint="@color/colorTransparent"
+                    android:hint="Table Number"
+                    android:id="@+id/etCartCustTableNumber"
+                    android:gravity="center"/>
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorBlack"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="People Number"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20sp"
+                android:layout_marginBottom="20sp">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center|bottom"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/minus"
+                        android:textColor="@color/colorBlack"
+                        android:id="@+id/btnCustTableMinQty"/>
+                </LinearLayout>
+                <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center"
+                    android:textSize="24sp"
+                    android:inputType="numberDecimal"
+                    android:backgroundTint="@color/colorTransparent"
+                    android:id="@+id/etCartCustTablePeopleNumber"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center|bottom"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/add"
+                        android:textColor="@color/colorBlack"
+                        android:id="@+id/btnCustTableAddQty"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/colorSilver"
+                    android:text="@string/cancel"
+                    android:textColor="@color/colorBlack"
+                    android:id="@+id/btnCartCustTableCancel"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/colorSuccess"
+                    android:text="@string/ok"
+                    android:textColor="@color/colorWhite"
+                    android:id="@+id/btnCartCustTableDone"/>
             </LinearLayout>
 
         </LinearLayout>
