--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -186,6 +186,70 @@
                 android:layout_gravity="center"
                 android:id="@+id/pbTransaction"/>
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="Print Transaction"
+                android:paddingHorizontal="5dp"
+                android:textSize="10dp"
+                android:id="@+id/btnTransactionPrint"
+                android:background="@drawable/button_border"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="10dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:visibility="gone"
+                android:id="@+id/cvTransactionPrint">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Printing"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="26sp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_margin="5dp">
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/printer"
+                            android:layout_marginEnd="10dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Printer"
+                            android:gravity="center"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="16sp"
+                            android:id="@+id/tvTransactionPrinterName"/>
+                    </LinearLayout>
+
+                    <ProgressBar
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
         </FrameLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
