--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -6,6 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutCheckOutContent"
     tools:context=".checkout.CheckOutActivity">
 
     <ScrollView
@@ -21,7 +22,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="10dp"
-                android:id="@+id/layoutCheckOutContent"
                 android:gravity="center">
 
                 <LinearLayout
@@ -33,7 +33,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="8"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textColor="@color/colorBlack"
                         android:textStyle="bold"
                         android:layout_marginStart="5dp"
@@ -49,9 +49,9 @@
                         android:gravity="end"
                         android:textColor="@color/colorBlack"
                         android:textStyle="bold"
+                        android:visibility="gone"
                         android:paddingHorizontal="15dp"
                         android:id="@+id/tvCheckOutRemoveCustomer"
-                        android:visibility="gone"
                         android:text="x"/>
                 </LinearLayout>
 
@@ -65,6 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:layout_marginTop="50dp"
                     android:id="@+id/tvCheckOutTotalTitle"
                     android:gravity="center_horizontal"
                     android:text="Total Amount Due"/>
