--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -108,7 +108,7 @@
 
     <fragment
         android:id="@+id/nav_about"
-        android:name="com.chcreation.pointofsale.AboutFragment"
+        android:name="com.chcreation.pointofsale.about.AboutFragment"
         android:label="About Creator"
         tools:layout="@layout/fragment_about" >
         <action
