--- a/app/src/main/res/layout/row_about_our_customer_list.xml
+++ b/app/src/main/res/layout/row_about_our_customer_list.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/ivRowAboutOurCust"
         android:layout_gravity="center"/>
 
